cert-manager-http/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    #kubernetes.io/tls-acme: "true"
    #kubernetes.io/ingress.class: "nginx"
    #cert-manager.io/cluster-issuer: letsencrypt-prod
    #cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  tls:
  - hosts:
    - "charlierlee.com"
    secretName: "charlierlee-com-tls-acme"
  rules:
  - host: "charlierlee.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: kuard-service
            port: 
              number: 80
